# winvfs

./: .gitignore  TASKS.md  meson.build  meson_options.txt  winvfs.cpp  winvfs.hpp  winvfs_test.cpp
subprojects/: asar.wrap  detours.wrap  xp3vfs.wrap
